# eikonalxx

./: CMakeLists.txt  LICENSE  README.md
cmake/: EikonalXXConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.gh  Doxyfile.in
docs/manual/: Manual.dox  Overview.dox  TopicFiniteDifferenceOperators.dox  TopicInstall.dox
include/eikonalxx/: enums.hpp  geometry2d.hpp  geometry3d.hpp  graph3d.hpp  model2d.hpp  model3d.hpp  solver2d.hpp  solver3d.hpp  solverOptions.hpp  source2d.hpp  source3d.hpp  station2d.hpp  station3d.hpp
include/eikonalxx/abstractBaseClass/: solver2d.hpp  solver3d.hpp
include/eikonalxx/analytic/: homogeneous2d.hpp  homogeneous3d.hpp  linearGradient2d.hpp  linearGradient3d.hpp
include/eikonalxx/io/: vtkLines2d.hpp  vtkPolygon2d.hpp  vtkRectilinearGrid2d.hpp  vtkRectilinearGrid3d.hpp
include/eikonalxx/ray/: gradientTracer2d.hpp  gradientTracerOptions.hpp  layerSolver.hpp  path2d.hpp  path3d.hpp  point2d.hpp  point3d.hpp  segment2d.hpp  segment3d.hpp  tracer2d.hpp
include/private/: grid.hpp  pack.hpp  pad.hpp  solver2d.hpp  solver3d.hpp  solverUtilities2d.hpp  solverUtilities3d.hpp  timer.hpp  version.hpp.in
python/: pyEikonalXX.cpp  pyGeometry2d.cpp  pyGeometry3d.cpp  pyModel2d.cpp  pyRay2d.cpp  pySolver2d.cpp  pySolverOptions.cpp  pySource2d.cpp  pySource3d.cpp  pyStation2d.cpp  pyStation3d.cpp  unit_tests.py
python/include/: pyGeometry2d.hpp  pyGeometry3d.hpp  pyModel2d.hpp  pyRay2d.hpp  pySolver2d.hpp  pySolverOptions.hpp  pySource2d.hpp  pySource3d.hpp  pyStation2d.hpp  pyStation3d.hpp
src/: geometry2d.cpp  geometry3d.cpp  gradient.hpp  graph3d.cpp  model2d.cpp  model3d.cpp  solver2d.cpp  solver3d.cpp  solverOptions.cpp  source2d.cpp  source3d.cpp  station2d.cpp  station3d.cpp  version.cpp
src/analytic/: homogeneous2d.cpp  homogeneous3d.cpp  linearGradient2d.cpp  linearGradient3d.cpp
src/io/: pack.hpp  vtkLines2d.cpp  vtkPolygon2d.cpp  vtkRectilinearGrid2d.cpp  vtkRectilinearGrid3d.cpp
src/ray/: bilinear.hpp  gradientTracer2d.cpp  gradientTracerOptions.cpp  layerSolver.cpp  layerTracer.hpp  optimize.hpp  path2d.cpp  path3d.cpp  point2d.cpp  point3d.cpp  segment2d.cpp  segment3d.cpp
testing/: analytic.cpp  converge2d.cpp  geometry.cpp  gradient.cpp  graph.cpp  layerSolver.cpp  model.cpp  ray.cpp  solver2d.cpp  solver3d.cpp  solverOptions.cpp  source.cpp  station.cpp
